# afire

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  SocialShare.ai  SocialShare.psd  build.rs  nose.txt  quotes.txt  todo.txt
.devcontainer/: devcontainer.json
.github/: SocialShare.ai
.github/workflows/: rust.yml
examples/: 01_basic.rs  02_serve_file.rs  03_routeing.rs  04_data.rs  05_header.rs  06_error_handling.rs  07_serve_static.rs  08_middleware.rs  09_cookie.rs  10_logging.rs  10_threading.rs  11_logging.rs  11_rate_limit.rs  12_path_prams.rs  12_rate_limit.rs  13_path_prams.rs  13_threading.rs  Cargo.toml  README.md  application_paste_bin.rs  application_quote_book.rs  chat_app.rs  middle_bench.rs  paste_bin.rs  path_test.rs  router.rs  test.rs  testing.rs  text.rs  tmp.rs
examples/basic/: Cargo.toml  basic.rs  cookie.rs  data.rs  error_handling.rs  header.rs  logging.rs  main.rs  middleware.rs  path_prams.rs  rate_limit.rs  routing.rs  serve_file.rs  serve_static.rs  state.rs  threading.rs
examples/basic/src/: main.rs
examples/basic/static/: index.html
examples/data/: index.txt
examples/data/02/: index.html
examples/old/: main.rs
examples/old-examples/: application_quote_book.rs  old-handle.rs
examples/old-examples/basic/: basic.rs  data.rs  header.rs  logging.rs  path_prams.rs  rate_limit.rs  routing.rs  serve_static.rs  trace.rs
examples/paste_bin/: Cargo.toml  config.toml
examples/paste_bin/src/: app.rs  config.rs  database.rs  error.rs  main.rs
examples/paste_bin/src/pages/: index.rs  mod.rs
examples/paste_bin/src/routes/: get_paste.rs  mod.rs  post_paste.rs
examples/paste_bin/src/sql/: create_pastes.sql  insert_paste.sql  query_paste.sql  query_recent_pastes.sql
examples/paste_bin/templates/: index.html
examples/src/: main.rs
lib/: afire.rs  common.rs  content_type.rs  context.rs  cookie.rs  error.rs  handle.rs  header.rs  http.rs  lib.rs  method.rs  middleware.rs  old_handle.rs  other.rs  path.rs  query.rs  request.rs  response.rs  route.rs  server.rs  socket.rs  thread_pool.rs  threadpool.rs  trace.rs
lib/extensions/: cache.rs  content_type.rs  date.rs  head.rs  logger.rs  mod.rs  path_normalizer.rs  range.rs  ratelimit.rs  real_ip.rs  redirect.rs  request_id.rs  route_shorthands.rs  serve_static.rs  sync_route.rs  trace.rs  util.rs
lib/http/: content_type.rs  cookie.rs  header.rs  method.rs  mod.rs  multipart.rs  query.rs  server_sent_events.rs  status.rs  web_socket.rs
lib/internal/: common.rs  encoding.rs  event_loop.rs  handle.rs  http.rs  misc.rs  mod.rs  path.rs  router.rs  socket.rs  socket_handler.rs  store.rs  sync.rs  thread_pool.rs
lib/internal/encoding/: base64.rs  mod.rs  sha1.rs  url.rs
lib/internal/nonblocking/: mod.rs
lib/proto/: mod.rs  server_sent_events.rs
lib/proto/http/: content_type.rs  cookie.rs  date.rs  header.rs  headers.rs  method.rs  mime.rs  mod.rs  multipart.rs  query.rs  status.rs
lib/proto/server_sent_events/: manager.rs  mod.rs
lib/server/: builder.rs  config.rs  handle.rs  mod.rs
lib/tests/: common.rs  content_type.rs  cookie.rs  header.rs  http.rs  mod.rs  query.rs  response.rs  route.rs  server.rs
src/: main.rs
testing/src/: main.rs
tests/: content_type.rs  header.rs
(+12 files in other folders)
