[package]
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2018"
name = "afire"
version = "1.3.0"

categories = ["network-programming", "web-programming::http-server"]
description = "🔥 A blazing fast web framework for Rust"
documentation = "https://docs.rs/afire"
exclude = [".github/", "SocialShare.*"]
homepage = "https://connorcode.com/writing/afire"
keywords = ["afire", "http", "WebFramework", "WebServer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Basicprogrammer10/afire"

[lib]
name = "afire"
path = "lib/lib.rs"

[features]
# Default
default = ["panic_handler"]
panic_handler = []

# Other
extensions = []
trace = []
debug = []

[dev-dependencies]
# Enable rate_limit and logging features for examples
afire = {path = ".", features = ["extensions", "trace", "debug"]}
