[package]
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2018"
name = "afire"
version = "2.1.0"

categories = ["network-programming", "web-programming::http-server"]
description = "🔥 A blazing fast web framework for Rust"
documentation = "https://docs.rs/afire"
exclude = [".github/", "SocialShare.*", ".devcontainer"]
homepage = "https://connorcode.com/writing/afire"
keywords = ["afire", "http", "WebFramework", "WebServer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Basicprogrammer10/afire"

[lib]
name = "afire"
path = "lib/lib.rs"

[features]
default = ["tracing"]

extensions = []
tracing = []

[dev-dependencies]
afire = { path = ".", features = ["extensions"] }
