[package]
name = "paste_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { path = "../..", features = ["extensions"] }
anyhow = "1.0.75"
askama = "0.12.0"
ctrlc = "3.4.1"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled", "uuid"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.0"
uuid = { version = "1.4.1", features = ["v4"] }
